flambda-backend/tests/backend/zero_alloc_checker/test_inference.opt.output
File "test_inference.ml", line 1:
Error: The implementation test_inference.ml
       does not match the interface test_inference.cmi: 
       Values do not match:
         val f_arity_one : int -> int -> int
       is not included in
         val f_arity_one : int -> int -> int [@@zero_alloc arity 1]
       zero_alloc arity mismatch:
       When using "zero_alloc" in a signature, the syntactic arity of
       the implementation must match the function type in the interface.
       Here the former is 2 and the latter is 1.
       File "test_inference.mli", line 11, characters 0-58:
         Expected declaration
       File "test_inference.ml", line 25, characters 4-15: Actual declaration
